--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "harry manchanda",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
